# advent-of-code

./: .gitignore  Cargo.toml  README.md  get-input.sh  pyproject.toml  start-day-python.sh  start-day-rust.sh  start-day.sh  timings.csv
2021/: Cargo.toml
2022/: Cargo.toml  timings.csv  timings.md
2022/src/: lib.rs
2023/: Cargo.toml  requirements.txt
2023/python/day1/: main.py
2023/python/day12/: main.py
2023/python/day13/: main.py
2023/python/day14/: main.py
2023/python/day16/: main.py
2023/python/day2/: main.py
2023/python/day21/: main.py
2023/python/day24/: main.py
2023/python/day25/: main.py
2023/python/day3/: main.py
2023/python/day4/: main.py
2023/python/day5/: main.py
2023/python/template/: main.py
2023/src/: lib.rs
2024/: Cargo.toml
2024/python/day1/: main.py
2024/python/day2/: main.py
2024/python/day3/: main.py
2024/python/day4/: main.py
2024/python/day6/: main.py
2024/python/template/: main.py
2024/src/: lib.rs
src/: day1.rs  main.rs
