[package]
name = "advent-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
nom = "7.1.1"
nom-supreme = "0.8.0"
petgraph = "0.6.2"
tinyvec = {version = "1.6.0", features = ["rustc_1_55", "alloc"]}
