[package]
name = "advent-2024"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arrayvec = "0.7.4"
fxhash = "0.2.1"
itertools = "0.14.0"
num = "0.4.1"
winnow = { version = "0.7.13", features = ["simd"] }
